[package]
name = "smokey"
version = "0.1.0"
authors = ["ukmrs <murias.wstork@gmail.com>"]
edition = "2018"
description = "Handsome TUI typing test"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version = "0.19.0", features = ["event-stream"]}
directories-next = "2.0.0"
fastrand = "1.4.0"
log = "0.4.11"
rand = "0.8.3"
simplelog = "0.9.0"
tui = { version = "0.15.0", features = ["crossterm"], default-features = false }

[build-dependencies]
directories-next = "2.0.0"
